--- a/css/style.css
+++ b/css/style.css
@@ -927,3 +927,46 @@ input[type="text"], select, textarea {
     color: #fff;
   }
 }
+
+
+.splash-entrance {
+	background-image: linear-gradient(180deg,rgba(25,35,45,1),rgba(20,30,70,0.75)),linear-gradient(90deg,#f00,#38f);
+
+}
+
+.splash-content {
+	position: absolute;
+	top: 40%;
+	color: white;
+	opacity: 0.80;
+	right:25%;
+	left: 25%;
+	text-align: center;
+	font-family: "proxima-nova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+
+.splash-content h2 {
+	font-weight: 700;
+	font-size: 50px;
+	margin-top: 70px;
+}
+
+.splash-content p {
+	font-size: 18px;
+	line-height: 1.5;
+}
+
+
+.page_homepage {
+	height: 100%;
+}
+
+.banner-video {
+	min-height: 100%;
+	min-width: 100%;
+	opacity:0.5;
+}
+
+
+
+
