--- a/css/style.css
+++ b/css/style.css
@@ -826,7 +826,7 @@ input[type="text"], select, textarea {
 /* === Pricing plans == */
 /*@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600);*/
 
-/*
+
 .promos,
 .promos :before,
 .promos :after {
@@ -838,20 +838,23 @@ input[type="text"], select, textarea {
   -webkit-transition: color 0.3s ease-in-out, background 0.3s ease-in-out;
   transition: color 0.3s ease-in-out, background 0.3s ease-in-out;
 }
-*/
+
 
 .promos {
   max-width: 1140px;
-  margin: 0 auto;
+/*  margin: 0 auto;*/
+  margin: 13em auto 3em auto;   
+  height: 350px;   
 }
 
 .promo {
-  margin: 1em .5em 1.625em;
-  padding: .25em 0 2em;
+  margin: 1em .5em 1em 1em;
+  padding: 2em 0em 2em;
   background: #FEFEFE;
 /*  font-family: 'Open Sans', sans-serif;*/
+  border-radius: 5px;    
   font-weight: 400;
-  line-height: 1.625;
+  line-height: 1;
   color: #222222;
   text-align: center;
   box-shadow: 0 0 4px 1px rgba(200, 200, 200, 0.8);    
@@ -871,6 +874,14 @@ input[type="text"], select, textarea {
     float: right;
     border-left: none;
   }
+  .promo.third {
+    float: right;
+    border-left: none;
+  }    
+  .promo.forth {
+    float: right;
+    border-left: none;
+  }    
 }
 .promo h4 {
   margin: .25em 0 0;
@@ -894,7 +905,31 @@ input[type="text"], select, textarea {
   padding: .25em 0;
   background: rgb(93, 130, 185);
   font-size: 250%;
-  color: #eeeeee;
+  color: #FFFFFF;
+}
+.promo.first .price {
+    background-color:#eada42;
+    background-image: url("/img/bubbles-1-s3.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
+.promo.second .price {
+    background-color:#e54e4b;
+    background-image: url("/img/bubbles-1-s3.jpg");
+    background-repeat: no-repeat;
+    background-position: top right;
+}
+.promo.third .price {
+    background-color:#a7d155;
+    background-image: url("/img/bubbles-1-s2.jpg");
+    background-repeat: no-repeat;
+    background-position: right;
+}
+.promo.forth .price {
+    background-color:#488dfe;
+    background-image: url("/img/bubbles-1-s4.jpg");
+    background-repeat: no-repeat;
+    background-position: top right;
 }
 .promo .buy {
   margin: 1em 0 0;
@@ -902,11 +937,13 @@ input[type="text"], select, textarea {
 .promo button {
   padding: 1em 3.25em;
   border: none;
-  border-radius: 40px;
+  border-radius: 5px;
   background: #eee;
     
   color: #000;
   cursor: pointer;
+  
+  display: none;    
 }
 .promo button:hover {
   background: #488dfe;
@@ -928,6 +965,77 @@ input[type="text"], select, textarea {
   .scale .price {
     color: #fff;
   }
+}
+
+
+/*PRICING TABLE*/
+.rwd-table {
+  margin: 1em 0;
+  min-width: 300px;
+}
+.rwd-table tr {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+}
+.rwd-table th {
+  display: none;
+}
+.rwd-table td {
+  display: block;
+}
+.rwd-table td:first-child {
+  padding-top: .5em;
+}
+.rwd-table td:last-child {
+  padding-bottom: .5em;
+}
+.rwd-table td:before {
+  content: attr(data-th) ": ";
+  font-weight: bold;
+  width: 6.5em;
+  display: inline-block;
+}
+@media (min-width: 480px) {
+  .rwd-table td:before {
+    display: none;
+  }
+}
+.rwd-table th, .rwd-table td {
+  text-align: left;
+}
+@media (min-width: 480px) {
+  .rwd-table th, .rwd-table td {
+    display: table-cell;
+    padding: .25em .5em;
+  }
+  .rwd-table th:first-child, .rwd-table td:first-child {
+    padding-left: 0;
+  }
+  .rwd-table th:last-child, .rwd-table td:last-child {
+    padding-right: 0;
+  }
+}
+
+.rwd-table {
+  background: #fff;
+  color: #000;
+  border-radius: .4em;
+  overflow: hidden;
+}
+.rwd-table tr {
+  border-color: rgba(100,100,100,0.1);
+}
+
+.rwd-table th, .rwd-table td {
+  margin: .5em 1em;
+}
+@media (min-width: 480px) {
+  .rwd-table th, .rwd-table td {
+    padding: 1em !important;
+  }
+}
+.rwd-table th, .rwd-table td:before {
+  color: #222;
 }
 
 
